--- a/app/src/main/res/layout/content_weather.xml
+++ b/app/src/main/res/layout/content_weather.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="homepunk.work.geolocation.ui.WeatherActivity"
     tools:showIn="@layout/activity_weather">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/weather_card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -26,7 +29,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:text="Hello World!" />
+                    android:text="WEATHER" />
 
                 <ImageView
                     android:id="@+id/lattlng_weather_icon"
@@ -34,31 +37,7 @@
                     android:layout_height="48dp"
                     android:layout_alignParentRight="true" />
             </RelativeLayout>
-
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/google_weather_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="Hello World!" />
-
-                <ImageView
-                    android:id="@+id/google_weather_icon"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_alignParentRight="true" />
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
