--- a/app/src/main/res/layout/content_weather.xml
+++ b/app/src/main/res/layout/content_weather.xml
@@ -5,15 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="homepunk.work.geolocation.ui.WeatherActivity"
+    tools:context="homepunk.work.geolocation.presentation.view.WeatherActivity"
     tools:showIn="@layout/activity_weather">
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:orientation="vertical">
 
         <android.support.v7.widget.CardView
             android:id="@+id/weather_card_view"
@@ -33,8 +31,8 @@
 
                 <ImageView
                     android:id="@+id/lattlng_weather_icon"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                    android:layout_width="@dimen/weather_info_size"
+                    android:layout_height="@dimen/weather_info_size"
                     android:layout_alignParentRight="true" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
