--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#2e2e2e</color>
     <color name="colorPrimaryDark">#2e2e2e</color>
     <color name="colorText">#000</color>
+    <color name="white">#FFF</color>
     <color name="colorAccent">#eee98930</color>
 </resources>
