--- a/app/src/main/res/layout/content_weather.xml
+++ b/app/src/main/res/layout/content_weather.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="homepunk.work.geolocation.presentation.view.WeatherActivity"
+    tools:context="homepunk.work.geolocation.presentation.views.WeatherActivity"
     tools:showIn="@layout/activity_weather">
 
     <LinearLayout
